# tabularBot

./: README.md  logging_config.py  main.py  pyproject.toml
cache/: cache_db_0.11.db.wal
notebooks/: Demo.ipynb  Stock.csv
tabularbot/: main.py
tabularbot/agent/: agent.py
tabularbot/config/: config.py
tabularbot/dataloader/: data_extractor.py
tabularbot/prompts/: base.py  csv_query_prompy.py  unstructured_data_cleaning_prompt.py
