[tool.poetry]
name = "tabularbot"
version = "0.1.0"
description = ""
authors = ["Ashwanth Kumar <ashwanth467@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pymupdf = "^1.24.9"
openai = "^1.40.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
